--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- NAVBAR-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a href=""><img class="navbar-brand logo" src="/logo.png" alt="CodeBlogo " /></a>
+      <a href=""><img class="navbar-brand logo" src="/CodeB-Bootstrap/logo.png" alt="CodeBlogo " /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/Prajwa06/CodeB-Bootstrap/about.html">About</a>
+            <a class="nav-link" href="/CodeB-Bootstrap/about.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="/articles.html" id="navbarDropdown" role="button"
@@ -57,7 +57,7 @@
             </ul>
           </li>
           <li class="nav-item top">
-            <a class="nav-link" href="/contact.html">Contact Us</a>
+            <a class="nav-link" href="/CodeB-Bootstrap/contact.html">Contact Us</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -162,7 +162,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" id="a">
-        <img src="/bram-naus-N1gUD_dCvJE-unsplash (1).jpg" class="d-block w-100" alt="..." />
+        <img src="/CodeB-Bootstrap/bram-naus-N1gUD_dCvJE-unsplash (1).jpg" class="d-block w-100" alt="..." />
         <div class="carousel-caption d-none d-md-block">
           <h2 class="intro">Welcome To CodeB</h2>
           <p class="intro">Latest Tech news Development Updates Tools</p>
@@ -174,7 +174,7 @@
         </div>
       </div>
       <div class="carousel-item" id="b">
-        <img src="/ales-nesetril-Im7lZjxeLhg-unsplash (1).jpg" class="d-block w-100" alt="..." />
+        <img src="/CodeB-Bootstrap/ales-nesetril-Im7lZjxeLhg-unsplash (1).jpg" class="d-block w-100" alt="..." />
         <div class="carousel-caption d-none d-md-block">
           <h2 class="intro">Programming Made Easier</h2>
           <p class="intro">Latest Tech news Development Updates Tools</p>
@@ -186,7 +186,7 @@
         </div>
       </div>
       <div class="carousel-item" id="c">
-        <img src="/remy_loz-3S0INpfREQc-unsplash (1).jpg" class="d-block w-100" alt="..." />
+        <img src="/CodeB-Bootstrap/remy_loz-3S0INpfREQc-unsplash (1).jpg" class="d-block w-100" alt="..." />
         <div class="carousel-caption d-none d-md-block">
           <h2 class="intro">Connecting people and Technology</h2>
           <p class="intro">Latest Tech news Development Updates Tools</p>
@@ -230,7 +230,7 @@
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="/art-rachen-yJpjLD3c9bU-unsplash.jpg" alt="" class="bd-placeholder-img" width="200"
+            <img src="/CodeB-Bootstrap/art-rachen-yJpjLD3c9bU-unsplash.jpg" alt="" class="bd-placeholder-img" width="200"
               height="300">
           </div>
         </div>
@@ -248,7 +248,7 @@
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="/andrea-de-santis-zwd435-ewb4-unsplash.jpg" alt="" class="bd-placeholder-img"
+            <img src="/CodeB-Bootstrap/andrea-de-santis-zwd435-ewb4-unsplash.jpg" alt="" class="bd-placeholder-img"
               width="200" height="300">
           </div>
         </div>
@@ -346,10 +346,10 @@
   <div class="container-fluid text-muted bg-dark ">
     <div class="py-5 mx-5">
       <p>Follow Us On Social Media</p>
-      <a href=""><img src="/facebook.png" alt="" height="20px"></a>
-      <a href=""><img src="/instagram.png" alt="" height="20px"></a>
-      <a href=""><img src="/twitter.png" alt="" height="20px"></a>
-      <a href=""><img src="/linkedin.png" alt="" height="20px"></a>
+      <a href=""><img src="/CodeB-Bootstrap/facebook.png" alt="" height="20px"></a>
+      <a href=""><img src="/CodeB-Bootstrap/instagram.png" alt="" height="20px"></a>
+      <a href=""><img src="/CodeB-Bootstrap/twitter.png" alt="" height="20px"></a>
+      <a href=""><img src="/CodeB-Bootstrap/linkedin.png" alt="" height="20px"></a>
     </div>
     <div class="row py-1 px-5">
       <div class="col-lg-3 col-md-4">
