--- a/about.html
+++ b/about.html
@@ -9,13 +9,13 @@
   <link rel="icon" href="css/favicon_io/favicon.ico" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="/CodeB-Bootstrap/styles.css" />
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a href=""><img class="navbar-brand logo" src="css/faviconio-logo/logo.png" alt="CodeBlogo " /></a>
+      <a href=""><img class="navbar-brand logo" src="/CodeB-Bootstrap/logo.png" alt="CodeBlogo " /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -23,10 +23,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="/">Home</a>
+            <a class="nav-link " aria-current="page" href="/CodeB-Bootstrap/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/about.html">About</a>
+            <a class="nav-link active" href="/CodeB-Bootstrap/about.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="/articles.html" id="navbarDropdown" role="button"
@@ -54,7 +54,7 @@
             </ul>
           </li>
           <li class="nav-item top">
-            <a class="nav-link" href="/contact.html">Contact Us</a>
+            <a class="nav-link" href="/CodeB-Bootstrap/contact.html">Contact Us</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -126,10 +126,10 @@
   <div class="container-fluid text-muted bg-dark mx-0" id="footer">
     <div class="py-5 mx-5">
       <p>Follow Us On Social Media</p>
-      <a href=""><img src="/facebook.png" alt="" height="20px"></a>
-      <a href=""><img src="/instagram.png" alt="" height="20px"></a>
-      <a href=""><img src="/twitter.png" alt="" height="20px"></a>
-      <a href=""><img src="/linkedin.png" alt="" height="20px"></a>
+      <a href=""><img src="/CodeB-Bootstrap/facebook.png" alt="" height="20px"></a>
+      <a href=""><img src="/CodeB-Bootstrap/instagram.png" alt="" height="20px"></a>
+      <a href=""><img src="/CodeB-Bootstrap/twitter.png" alt="" height="20px"></a>
+      <a href=""><img src="/CodeB-Bootstrap/linkedin.png" alt="" height="20px"></a>
     </div>
     <div class="row py-1 px-5">
       <div class="col-lg-3 col-md-4">
