--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodeB-Contact Us</title>
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/CodeB-Bootstrap/favicon.ico" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/CodeB-Bootstrap/styles.css" />
 </head>
 
 <body>
@@ -146,10 +146,10 @@
     <div class="container-fluid text-muted bg-dark mx-0" id="footer">
     <div class="py-5 mx-5">
       <p>Follow Us On Social Media</p>
-      <a href=""><img src="/facebook.png" alt="" height="20px"></a>
-      <a href=""><img src="/instagram.png" alt="" height="20px"></a>
-      <a href=""><img src="/twitter.png" alt="" height="20px"></a>
-      <a href=""><img src="/linkedin.png" alt="" height="20px"></a>
+      <a href=""><img src="/CodeB-Bootstrap/facebook.png" alt="" height="20px"></a>
+      <a href=""><img src="/CodeB-Bootstrap/instagram.png" alt="" height="20px"></a>
+      <a href=""><img src="/CodeB-Bootstrap/twitter.png" alt="" height="20px"></a>
+      <a href=""><img src="/CodeB-Bootstrap/linkedin.png" alt="" height="20px"></a>
     </div>
     <div class="row py-1 px-5">
       <div class="col-lg-3 col-md-4">
