--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="/">Home</a>
+                        <a class="nav-link " aria-current="page" href="/CodeB-Bootstrap/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link" href="/CodeB-Bootstrap/about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="/articles.html" id="navbarDropdown" role="button"
@@ -55,7 +55,7 @@
                         </ul>
                     </li>
                     <li class="nav-item top">
-                        <a class="nav-link active" href="/contact.html">Contact Us</a>
+                        <a class="nav-link active" href="/CodeB-Bootstrap/contact.html">Contact Us</a>
                     </li>
                 </ul>
                 <form class="d-flex">
