--- a/contact.html
+++ b/contact.html
@@ -199,7 +199,9 @@
 
     <p class="mx-5">©CodeB, All rights reserved, Product by Papergum</p>
   </div>
-
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
